// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should filter admin 1`] = `
Array [
  Object {
    "email": "admin1",
    "role": "admin",
  },
  Object {
    "email": "admin2",
    "role": "admin",
  },
]
`;

exports[`Should return email 1`] = `
Array [
  "admin1",
  "admin2",
  "normal1",
  "normal2",
]
`;

exports[`Should return email of admin 1`] = `
Array [
  "admin1",
  "admin2",
]
`;
